<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/shadowLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:text="@string/symbol_label" />

            <EditText
                android:id="@+id/et_symbol"
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/symbol_hint"
                android:imeOptions="actionDone"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp" >

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/rb_shares"
                    style="@style/labelStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/rb_dollars"
                    style="@style/labelStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/et_shares"
                    style="@style/textStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:hint="@string/shares_hint"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/et_dollars"
                    style="@style/textStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:enabled="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="center_vertical"
                    android:hint="@string/dollars_hint"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_shares"
                    style="@style/shadowLabelStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="50"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:text="@string/shares_label" />

                <TextView
                    android:id="@+id/tv_dollars"
                    style="@style/shadowLabelStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="50"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:text="@string/dollars_label" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp" >

            <TextView
                android:id="@+id/tv_buy_date"
                style="@style/shadowLabelStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="center"
                android:paddingRight="5dp"
                android:singleLine="true"
                android:text="@string/buy_date_label" />

            <TextView
                android:id="@+id/tv_sell_date"
                style="@style/shadowLabelStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:text="@string/sell_date_label" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp" >

            <EditText
                android:id="@+id/et_buy_date"
                style="@style/textStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="50"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:hint="@string/buy_date_hint"
                android:inputType="none"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_sell_date"
                style="@style/textStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="50"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:hint="@string/sell_date_hint"
                android:inputType="none"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_quote"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="@drawable/quote_bg"
            android:orientation="vertical"
            android:padding="5dp"
            android:visibility="invisible" >

            <LinearLayout
                android:id="@+id/ll_price_labels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone" >

                <TextView
                    style="@style/shadowLabelStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="center"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:text="@string/buy_price_label" />

                <TextView
                    style="@style/shadowLabelStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:text="@string/sell_price_label" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_price_values"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/tv_buy_price"
                    style="@style/shadowLabelStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="center"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_sell_price"
                    style="@style/shadowLabelStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_net"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/tv_net_label"
                    style="@style/shadowLabelStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_net"
                    style="@style/shadowLabelStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>